<resources>
    <string name="app_name">Fan</string>
    <string name="errcode_success">用户同意</string>
    <string name="errcode_cancel">用户取消</string>
    <string name="ERR_AUTH_DENIED">用户拒绝授权</string>
    <string name="errcode_unknown">不明原因</string>
    <string name="readed">已读</string>
    <string name="about">关于</string>
    <string name="logout">注销</string>
    <string name="version">版本号:</string>
    <string name="account">帐号:</string>
    <string name="chat">聊天</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="network_forbidden_login">你被服务器禁止登录，详询客服</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="kick_out">帐号在其它设备登录</string>
    <string name="edittext_length_tips">你输入的字数已经超过了限制！</string>
    <string name="file_transfer">文件云存储</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="how_to_get_account">如何获取帐号</string>
    <string name="multi_client_management">多端登录管理</string>
    <string name="kick_other_client_prompt">踢掉 %1$s</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2016 网易公司版权所有</string>
    <string name="edit_nick">修改昵称</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="location_init_map_error">初始化地图服务失败</string>
    <string name="location_navigate">导航</string>
    <string name="self_location">我在这个位置</string>
    <string name="location_unable_to_get_you">暂时无法获取您的位置</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_contact">消息</string>
    <string name="tab_found">动态墙</string>
    <string name="tab_me">我</string>
    <string name="tab_lobby">聊天大厅</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="line_logined">登录成功</string>
    <string name="line_unlogin">未登录</string>
    <string name="line_invalid">登录无效，请重试</string>
    <string name="line_net_broken">网络故障</string>
    <string name="line_connecting">连接中...</string>
    <string name="line_logining">登录中</string>
    <string name="line_syncing">正在同步数据</string>
    <string name="line_kickout">强迫下线</string>
    <string name="line_kick_by_other_client">其他终端登录，被迫下线</string>
    <string name="line_forbidden">该用户被禁止登录，请去官网申请登录</string>
    <string name="line_pwd_error">密码错误</string>
    <string name="user_nickname">昵称:</string>
    <string name="user_fanid">FanID:</string>
    <string name="user_blog">我的动态:</string>
    <string name="user_following">我的关注:</string>
    <string name="user_fans">我的粉丝:</string>
    <string name="user_acticle">我的文章:</string>
    <string name="user_draft">我的草稿:</string>
    <string name="user_favorite">我的收藏:</string>
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="signature">签 名</string>
    <string name="head">头 像</string>
    <string name="user_information">个人信息</string>
    <string name="user_info">用户信息</string>
    <string name="nickname">昵 称</string>
    <string name="alias">备注名</string>
    <string name="gender">性 别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其他</string>
    <string name="phone_number">手机号码</string>
    <string name="set_head_image">设置头像</string>
    <string name="user_info_update_success">设置成功</string>
    <string name="user_info_update_cancel">取消更新</string>
    <string name="user_info_update_failed">设置失败，请重试</string>
    <string name="head_update_success">头像设置成功</string>
    <string name="head_update_failed">头像设置失败，请重试</string>
    <string name="nickname_empty">昵称不能为空</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="create_team_activity">创建群聊</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="toolbar_mutli_new_msg_tips">个联系人发来新消息</string>
    <string name="toolbar_new_msg_coming_ticker_text"> 有新消息</string>
    <string name="toolbar_new_msg_general_tips">你收到一条新消息</string>
    <string name="toolbar_add_buddy_request_tips">请求添加你为好友</string>
    <string name="toolbar_add_buddy_verify_tips">通过了你的好友请求</string>
    <string name="toolbar_new_notification_general_tips">你收到一条新通知</string>
    <string name="black_list">黑名单</string>
    <string name="msg_notice">消息提醒</string>
    <string name="doodle">白板</string>
    <string name="start_session">正在邀请对方，请稍后</string>
    <string name="callee_reject">对方拒绝了本次请求</string>
    <string name="callee_ack_timeout">对方未接受请求</string>
    <string name="receive_session">对方发起白板演示</string>
    <string name="start_session_record">我发起了白板演示</string>
    <string name="session_end_record">白板演示已结束</string>
    <string name="end_session_tip_head">退出白板演示</string>
    <string name="end_session_tip_content">退出后，你将不再接收白板演示的消息内容</string>
    <string name="target_has_leave_session">对方已离开</string>
    <string name="target_has_end_session">对方结束白板演示</string>
    <string name="accept_session">接受</string>
    <string name="reject_session">拒绝</string>
    <string name="doodle_back">上一步</string>
    <string name="doodle_clear">清屏</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="snapchat_title">阅后即焚</string>
    <string name="done">完成</string>
    <string name="latest_message_draft_prefix">[草稿] </string>
    <string name="main_msg_unread_msg_count">[%d条]</string>
    <string name="out_time">超时</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="room_id">房间号</string>
    <string name="room_name">房间名字</string>
    <string name="room_owner">房主的名字</string>
    <string name="room_online_number">在线人数</string>
    <string name="create_room">创建房间</string>
    <string name="text_hint">请输入房间名</string>
    <string name="standard_character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="blog">动态</string>
    <string name="article">文章</string>
    <string name="create_group">新建分组</string>
    <string name="group_hint">请输入新分组的名字</string>
    <string name="deleted">已删除</string>
    <string name="undo">撤销</string>
    <string name="hello">哈喽世界</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
</resources>