<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Created by J on  2017.
  ~  * Copyright (c) 2017.  All rights reserved.
  ~  *
  ~  * Last modified 17-3-13 上午11:12
  ~  *
  ~  * Project name: 911fan
  ~  *
  ~  * Contact me:
  ~  * WeChat:  worromoT_
  ~  * Email: 2212131349@qq.com
  ~  *
  ~  * Warning:If my code is same as yours, then i copy you!
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jay="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/action_search" android:actionViewClass="android.widget.SearchView" android:icon="@drawable/actionbar_search_icon"  android:title="@string/action_search" jay:showAsAction="ifRoom|collapseActionView"/>
    <item android:id="@+id/action_group_chat" android:icon="@drawable/menu_group_chat_icon" android:title="@string/menu_group_chat"/>
    <item android:id="@+id/action_add_friend" android:icon="@drawable/menu_add_icon" android:title="@string/menu_addfriend"/>
    <item android:id="@+id/action_scan" android:icon="@drawable/men_scan_icon" android:title="@string/menu_scan"/>
    <item android:id="@+id/action_feedback" android:icon="@drawable/menu_feedback_icon" android:title="@string/menu_feedback"/>
</menu>