<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="300dp"
    android:layout_height="420dp"
    android:layout_gravity="center"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_create_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/create_room"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20" />


    <com.imfan.j.a91fan.uiabout.CustomEditText
        android:id="@+id/et_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_create_room"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/text_hint"
        android:maxLength="10"
        android:textSize="@dimen/text_size_24" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />
</RelativeLayout>
