<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_white_ffffffff"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/tv_room_id"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/room_id" />
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">
        <TextView
            android:id="@+id/tv_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/sp_24"
            android:text="@string/room_name"/>
        <View
            android:id="@+id/room_divider_line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/color_yellow_796413"
            android:layout_below="@id/tv_room_name"
            android:layout_margin="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/room_divider_line"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_room_owner"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/room_owner"
                android:layout_margin="2dp"
                android:textSize="@dimen/sp_16"
                android:layout_gravity="left" />
            <TextView
                android:id="@+id/tv_room_online_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textSize="@dimen/sp_16"
                android:text="@string/room_online_number"
                android:layout_gravity="right"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/color_yellow_796413"
        android:layout_marginBottom="2dp"
        />
</LinearLayout>