<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jay="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        jay:elevation="0dp"
        jay:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            jay:titleTextAppearance="@style/Toolbar.TitleText"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.imfan.j.a91fan.uiabout.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            jay:color="#ff45c01a"
            jay:icon="@drawable/user_message_lobby"
            jay:text="@string/tab_lobby"
            jay:text_size="12sp" />

        <com.imfan.j.a91fan.uiabout.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            jay:color="#ff45c01a"
            jay:icon="@drawable/user_message"
            jay:text="@string/tab_contact"
            jay:text_size="12sp" />

        <com.imfan.j.a91fan.uiabout.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            jay:color="#ff45c01a"
            jay:icon="@drawable/user_share"
            jay:text="@string/tab_found"
            jay:text_size="12sp" />

        <com.imfan.j.a91fan.uiabout.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            jay:color="#ff45c01a"
            jay:icon="@drawable/contacts"
            jay:text="通讯录"
            jay:text_size="12sp" />

        <com.imfan.j.a91fan.uiabout.ChangeColorIconWithText
            android:id="@+id/id_indicator_five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            jay:color="#ff45c01a"
            jay:icon="@drawable/user_male"
            jay:text="@string/tab_me"
            jay:text_size="12sp" />
    </LinearLayout>
</LinearLayout>
