<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ /*
  ~  * Created by J on  2017.
  ~  * Copyright (c) 2017.  All rights reserved.
  ~  *
  ~  * Last modified 17-3-7 下午7:48
  ~  *
  ~  * Project name: 911fan
  ~  *
  ~  * Contact me:
  ~  * WeChat:  worromoT_
  ~  * Email: 2212131349@qq.com
  ~  *
  ~  * Warning:If my code is same as yours, then i copy you!
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="4dp"
            android:text="@string/prompt"
            android:textColor="#333"
            android:visibility="visible"
            android:textSize="20sp" />
       
 
        <TextView
            android:id="@+id/alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textColor="#333"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/ease_btn_cancel_bj"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#666666"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/ease_btn_blue_selector"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
